updated config file

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -104,6 +104,11 @@ gui:
         connect:
             task_runner: 'task_runner_logic'
 
+    helmholtz_coil_gui:
+        module.Class: 'helmholtz_coil.helmholtz_coil_gui.HelmholtzCoilGui'
+        connect: 
+            helmholtz_coil_logic: 'helmholtz_coil_logic'
+
 logic:
     time_series_reader_logic:
         module.Class: 'time_series_reader_logic.TimeSeriesReaderLogic'
@@ -223,6 +228,13 @@ logic:
         module.Class: 'taskrunner.TaskRunnerLogic'
         options:
             module_tasks: {}
+
+    
+    helmholtz_coil_logic:
+        module.Class: 'helmholtz_coil_logic.HelmholtzCoilLogic'
+        connect:
+            coil_polarity_relay: helmholtz_coil_relay
+            coil_current_source: helmholtz_coil
 
 hardware:
     instream_dummy:
@@ -378,3 +390,20 @@ hardware:
                 slope: 10
                 offset: 100
                 noise: 0.1
+
+    helmholtz_coil:
+        module.Class: 'helmholtz_coil.helmholtzcoil.HelmholtzCoil'
+        options:
+            current_min: -3
+            current_max: 3
+            voltage_max: 3
+            address: "ASRL3::INSTR"
+            field_coeffs: {
+        'X' : [1.36932, -0.0174511], ##slope, intercept
+        'Y' : [2.13605, 0.0259495],
+        'Z' : [1.24437, -0.0123547],
+}
+    helmholtz_coil_relay:
+        module.Class: 'helmholtz_coil.helmholtzcoil.HelmholtzCoilRelay'
+        options:
+            relay_address: "COM4"
