now working with dummy helmholtzcoil

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -392,7 +392,7 @@ hardware:
                 noise: 0.1
 
     helmholtz_coil:
-        module.Class: 'helmholtz_coil.helmholtzcoil.HelmholtzCoil'
+        module.Class: 'dummy.helmholtz_coil_dummy.HelmholtzCoil'
         options:
             current_min: -3
             current_max: 3
@@ -404,6 +404,6 @@ hardware:
         'Z' : [1.24437, -0.0123547],
 }
     helmholtz_coil_relay:
-        module.Class: 'helmholtz_coil.helmholtzcoil.HelmholtzCoilRelay'
+        module.Class: 'dummy.helmholtz_coil_dummy.HelmholtzCoilRelay'
         options:
             relay_address: "COM4"
