coil gui seems to be functioning with dummy hardware, but needs testing on real hardware

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -229,12 +229,22 @@ logic:
         options:
             module_tasks: {}
 
-    
+
     helmholtz_coil_logic:
         module.Class: 'helmholtz_coil_logic.HelmholtzCoilLogic'
         connect:
-            coil_polarity_relay: helmholtz_coil_relay
-            coil_current_source: helmholtz_coil
+            current_source: 'helmholtz_coil'
+            relay_source: 'helmholtz_coil_relay'
+        options:
+            field_coeffs: {
+            'X' : [1.36932, -0.0174511], ##slope, intercept
+            'Y' : [2.13605, 0.0259495],
+            'Z' : [1.24437, -0.0123547]
+            }
+            current_min: -3
+            current_max: 3
+            voltage_max: 3
+
 
 hardware:
     instream_dummy:
@@ -394,16 +404,9 @@ hardware:
     helmholtz_coil:
         module.Class: 'dummy.helmholtz_coil_dummy.HelmholtzCoil'
         options:
-            current_min: -3
-            current_max: 3
-            voltage_max: 3
             address: "ASRL3::INSTR"
-            field_coeffs: {
-        'X' : [1.36932, -0.0174511], ##slope, intercept
-        'Y' : [2.13605, 0.0259495],
-        'Z' : [1.24437, -0.0123547],
-}
+
     helmholtz_coil_relay:
-        module.Class: 'dummy.helmholtz_coil_dummy.HelmholtzCoilRelay'
+        module.Class: 'dummy.helmholtz_coil_relay_dummy.HelmholtzCoilRelay'
         options:
             relay_address: "COM4"
