working helmholtz coil gui, started on laser gui

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -402,11 +402,12 @@ hardware:
                 noise: 0.1
 
     helmholtz_coil:
-        module.Class: 'dummy.helmholtz_coil_dummy.HelmholtzCoil'
+        module.Class: 'helmholtz_coil.helmholtzcoil.HelmholtzCoil'
         options:
-            address: "ASRL3::INSTR"
+            address: "ASRL5::INSTR"
 
     helmholtz_coil_relay:
-        module.Class: 'dummy.helmholtz_coil_relay_dummy.HelmholtzCoilRelay'
+        module.Class: 'helmholtz_coil.helmholtzcoilrelay.HelmholtzCoilRelay'
         options:
             relay_address: "COM4"
+            relay_pinouts: [7,8,9,10,11,12]
