notebook for controlling pcie daq, basic gui integration for  ni-600x usb daq instreamer

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -117,7 +117,7 @@ logic:
             channel_buffer_size: 1048576  # optional (default: 1MSample)
             max_raw_data_bytes: 1073741824  # optional (default: 1GB)
         connect:
-            streamer: instream_dummy
+            streamer: nidaq6001_card
 
     scanning_probe_logic:
         module.Class: 'scanning_probe_logic.ScanningProbeLogic'
@@ -264,6 +264,22 @@ hardware:
                 - 'counts'
                 - 'sine'
                 - 'sine'
+                - 'counts'
+            data_type: 'float64'
+            sample_timing: 'CONSTANT'  # Can be 'CONSTANT', 'TIMESTAMP' or 'RANDOM'
+    nidaq6001_card:
+        module.Class: 'ni_600x_series.ni_600x_series_in_streamer.NI600XSeriesInStreamer'
+        options:
+            # device_name:
+            #     - "Dev3"
+            analog_sources:
+                - 'ai0'
+                - 'ai1'
+            channel_units:
+                - 'V'
+                - 'V'
+            channel_signals:  # Can be 'counts' or 'sine'
+                - 'counts'
                 - 'counts'
             data_type: 'float64'
             sample_timing: 'CONSTANT'  # Can be 'CONSTANT', 'TIMESTAMP' or 'RANDOM'
