time_series gui working properly for ni x series control

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -42,62 +42,66 @@ gui:
         connect:
             _time_series_logic_con: time_series_reader_logic
 
-    scanner_gui:
-        module.Class: 'scanning.scannergui.ScannerGui'
-        # options:
-        #     default_position_unit_prefix: null  # optional, use unit prefix characters, e.g. 'u' or 'n'
-        #     min_crosshair_size_fraction: 0.02   # minimum crosshair size as fraction of the displayed scan range
-        connect:
-            scanning_logic: scanning_probe_logic
-            data_logic: scanning_data_logic
-            optimize_logic: scanning_optimize_logic
+    # aom_control:
+    #     module.Class: 'aom_control.aom_control_gui.AomControlGui'
+    #     connect:
+    #         aomlogic: 'aomlogic'
+    # scanner_gui:
+    #     module.Class: 'scanning.scannergui.ScannerGui'
+    #     # options:
+    #     #     default_position_unit_prefix: null  # optional, use unit prefix characters, e.g. 'u' or 'n'
+    #     #     min_crosshair_size_fraction: 0.02   # minimum crosshair size as fraction of the displayed scan range
+    #     connect:
+    #         scanning_logic: scanning_probe_logic
+    #         data_logic: scanning_data_logic
+    #         optimize_logic: scanning_optimize_logic
 
-    poi_manager_gui:
-        module.Class: 'poimanager.poimanagergui.PoiManagerGui'
-        options:
-            data_scan_axes: xy  #optional, default: xy
-        connect:
-            poi_manager_logic: 'poi_manager_logic'
+    # poi_manager_gui:
+    #     module.Class: 'poimanager.poimanagergui.PoiManagerGui'
+    #     options:
+    #         data_scan_axes: xy  #optional, default: xy
+    #     connect:
+    # #         poi_manager_logic: 'poi_manager_logic'
 
-    camera_gui:
-        module.Class: 'camera.cameragui.CameraGui'
-        connect:
-            camera_logic: camera_logic
+    # camera_gui:
+    #     module.Class: 'camera.cameragui.CameraGui'
+    #     connect:
+    #         camera_logic: camera_logic
 
-    laser_gui:
-        module.Class: 'laser.laser_gui.LaserGui'
-        connect:
-            laser_logic: laser_logic
+    # laser_gui:
+    #     module.Class: 'laser.laser_gui.LaserGui'
+    #     connect:
+    #         laser_logic: laser_logic
 
-    odmr_gui:
-        module.Class: 'odmr.odmrgui.OdmrGui'
-        connect:
-            odmr_logic: 'odmr_logic'
+    # odmr_gui:
+    #     module.Class: 'odmr.odmrgui.OdmrGui'
+    #     connect:
+    #         odmr_logic: 'odmr_logic'
 
-    switch_gui:
-        module.Class: 'switch.switch_gui.SwitchGui'
-        connect:
-            switchlogic: 'switch_logic'
+    # switch_gui:
+    #     module.Class: 'switch.switch_gui.SwitchGui'
+    #     connect:
+    #         switchlogic: 'switch_logic'
 
-    pulsed_gui:
-        module.Class: 'pulsed.pulsed_maingui.PulsedMeasurementGui'
-        connect:
-            pulsedmasterlogic: 'pulsed_master_logic'
+    # pulsed_gui:
+    #     module.Class: 'pulsed.pulsed_maingui.PulsedMeasurementGui'
+    #     connect:
+    #         pulsedmasterlogic: 'pulsed_master_logic'
 
-    qdplot_gui:
-        module.Class: 'qdplot.qdplot_gui.QDPlotterGui'
-        connect:
-            qdplot_logic: 'qdplot_logic'
+    # qdplot_gui:
+    #     module.Class: 'qdplot.qdplot_gui.QDPlotterGui'
+    #     connect:
+    #         qdplot_logic: 'qdplot_logic'
 
-    spectrometer:
-        module.Class: 'spectrometer.spectrometer_gui.SpectrometerGui'
-        connect:
-            spectrometer_logic: 'spectrometerlogic'
+    # spectrometer:
+    #     module.Class: 'spectrometer.spectrometer_gui.SpectrometerGui'
+    #     connect:
+    #         spectrometer_logic: 'spectrometerlogic'
 
-    pid_gui:
-        module.Class: 'pidgui.pidgui.PIDGui'
-        connect:
-            pid_logic: pid_logic
+    # pid_gui:
+    #     module.Class: 'pidgui.pidgui.PIDGui'
+    #     connect:
+    #         pid_logic: pid_logic
 
     task_runner_gui:
         module.Class: 'taskrunner.task_runner_gui.TaskRunnerGui'
@@ -114,10 +118,10 @@ logic:
         module.Class: 'time_series_reader_logic.TimeSeriesReaderLogic'
         options:
             max_frame_rate: 20  # optional (default: 20Hz)
-            channel_buffer_size: 1048576  # optional (default: 1MSample)
+            channel_buffer_size: 20  # optional (default: 1MSample)
             max_raw_data_bytes: 1073741824  # optional (default: 1GB)
         connect:
-            streamer: nidaq6001_card
+            streamer: nicard_6363_instreamer
 
     scanning_probe_logic:
         module.Class: 'scanning_probe_logic.ScanningProbeLogic'
@@ -245,6 +249,19 @@ logic:
             current_max: 3
             voltage_max: 3
 
+    
+    # aomlogic:
+    #     module.Class: 'aom_control_logic.AomControlLogic'
+    #     photodiode_channel: '/Dev3/ai0'
+    #     aom_channel: '/Dev3/ao3'
+    #     # Calibrated 21/04/2025 # 12/07/2023
+    #     # photodiode_factor: 132.8 # 200
+    #     # query_interval: 10
+    #     # ui_update_interval: 100
+    #     # aom_volt_range: [0, 4.5] # or 5 
+    #     connect:
+    #         nicard: 'nicard_6363'
+
 
 hardware:
     instream_dummy:
@@ -283,6 +300,50 @@ hardware:
                 - 'counts'
             data_type: 'float64'
             sample_timing: 'CONSTANT'  # Can be 'CONSTANT', 'TIMESTAMP' or 'RANDOM'
+
+    nicard_6363_ao:
+        module.Class: 'ni_x_series.ni_x_series_analog_output.NIXSeriesAnalogOutput'
+        options:
+            device_name: "Dev3"
+            channels:
+                ao0:
+                    limits: [-10.0, 10.0]
+                    keep_value: True
+                ao1:
+                    limits: [-10.0, 10.0]
+                    keep_value: True
+                ao2:
+                    limits: [-10.0, 10.0]
+                    keep_value: True
+                ao3:
+                    limits: [-10.0, 10.0]
+                    keep_value: True
+    nicard_6363_instreamer:
+        module.Class: 'ni_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
+        options:
+            device_name: 'Dev3'
+            analog_sources:  # optional
+                - 'ai0'
+                - 'ai1'
+                - "ai2"
+                - "ai3"
+                - "ai4"
+                - "ai5"
+                - "ai6"
+                - "ai7"
+            max_channel_samples_buffer: 100
+
+    # nicard_6363_instreamer2:
+    #     module.Class: 'national_instruments_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
+    #         options:
+    #             device_name: "Dev5"
+    #             analog_sources:
+    #                 - "ai0"
+    #                 - "ai1"
+    #                 - "ai2"
+    #                 - "ai3"
+    #                 - "ai4"
+    #                 - "ai5"
 
     scanner_dummy:
         module.Class: 'dummy.scanning_probe_dummy.ScanningProbeDummy'
