mostly functioning aom controller, almost working apd controller

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -35,17 +35,25 @@ global:
     daily_data_dirs: True
 
 gui:
-    time_series_gui:
+    time_series:
         module.Class: 'time_series.time_series_gui.TimeSeriesGui'
         options:
             use_antialias: True  # optional, set to False if you encounter performance issues
         connect:
             _time_series_logic_con: time_series_reader_logic
 
-    # aom_control:
-    #     module.Class: 'aom_control.aom_control_gui.AomControlGui'
-    #     connect:
-    #         aomlogic: 'aomlogic'
+    aom_control:
+        module.Class: 'aom_control.aom_control_gui.AomControlGui'
+        connect:
+            aomlogic: 'aomlogic'
+
+    APD:
+        module.Class: 'apd.apd_gui.APDGui'
+        options:
+            use_antialias: True  # optional, set to False if you encounter performance issues
+        connect:
+            _time_series_logic_con: time_series_reader_logic
+
     # scanner_gui:
     #     module.Class: 'scanning.scannergui.ScannerGui'
     #     # options:
@@ -120,6 +128,7 @@ logic:
             max_frame_rate: 20  # optional (default: 20Hz)
             channel_buffer_size: 20  # optional (default: 1MSample)
             max_raw_data_bytes: 1073741824  # optional (default: 1GB)
+            apd_stream_ai : "ai1"
         connect:
             streamer: nicard_6363_instreamer
 
@@ -250,17 +259,19 @@ logic:
             voltage_max: 3
 
     
-    # aomlogic:
-    #     module.Class: 'aom_control_logic.AomControlLogic'
-    #     photodiode_channel: '/Dev3/ai0'
-    #     aom_channel: '/Dev3/ao3'
-    #     # Calibrated 21/04/2025 # 12/07/2023
-    #     # photodiode_factor: 132.8 # 200
-    #     # query_interval: 10
-    #     # ui_update_interval: 100
-    #     # aom_volt_range: [0, 4.5] # or 5 
-    #     connect:
-    #         nicard: 'nicard_6363'
+    aomlogic:
+        module.Class: 'aom_control_logic.AomControlLogic'
+        options:
+            photodiode_channel: '/Dev3/ai0'
+            aom_channel: '/Dev3/ao3'
+    #     Calibrated 21/04/2025 # 12/07/2023
+            photodiode_factor: 132.8 # 200
+            query_interval: 10
+            ui_update_interval: 100
+            aom_volt_range: [0, 4.5] # or 5 
+        connect:
+            nicard_aom_ao: 'nicard_aom_ao'
+            photodiode_channel: "photodiode_channel"
 
 
 hardware:
@@ -284,30 +295,14 @@ hardware:
                 - 'counts'
             data_type: 'float64'
             sample_timing: 'CONSTANT'  # Can be 'CONSTANT', 'TIMESTAMP' or 'RANDOM'
-    nidaq6001_card:
-        module.Class: 'ni_600x_series.ni_600x_series_in_streamer.NI600XSeriesInStreamer'
-        options:
-            # device_name:
-            #     - "Dev3"
-            analog_sources:
-                - 'ai0'
-                - 'ai1'
-            channel_units:
-                - 'V'
-                - 'V'
-            channel_signals:  # Can be 'counts' or 'sine'
-                - 'counts'
-                - 'counts'
-            data_type: 'float64'
-            sample_timing: 'CONSTANT'  # Can be 'CONSTANT', 'TIMESTAMP' or 'RANDOM'
 
     nicard_6363_ao:
         module.Class: 'ni_x_series.ni_x_series_analog_output.NIXSeriesAnalogOutput'
         options:
-            device_name: "Dev3"
+            device_name: 'Dev3'
             channels:
                 ao0:
-                    limits: [-10.0, 10.0]
+                    limits: [0, 5]
                     keep_value: True
                 ao1:
                     limits: [-10.0, 10.0]
@@ -318,6 +313,25 @@ hardware:
                 ao3:
                     limits: [-10.0, 10.0]
                     keep_value: True
+    nicard_aom_ao:
+        module.Class: 'ni_x_series.ni_x_series_analog_output.NIXSeriesAnalogOutput'
+        options:
+            device_name: 'Dev3'
+            channels:
+                ao0:
+                    limits: [0, 5]
+                    keep_value: True
+
+
+    photodiode_channel:
+        module.Class : 'ni_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
+        options:
+            device_name: "Dev3"
+            analog_sources: 
+                - "ai7"
+            max_channel_samples_buffer: 2
+        
+
     nicard_6363_instreamer:
         module.Class: 'ni_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
         options:
@@ -330,20 +344,21 @@ hardware:
                 - "ai4"
                 - "ai5"
                 - "ai6"
-                - "ai7"
             max_channel_samples_buffer: 100
 
-    # nicard_6363_instreamer2:
-    #     module.Class: 'national_instruments_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
-    #         options:
-    #             device_name: "Dev5"
-    #             analog_sources:
-    #                 - "ai0"
-    #                 - "ai1"
-    #                 - "ai2"
-    #                 - "ai3"
-    #                 - "ai4"
-    #                 - "ai5"
+    nicard_6363_instreamer2:
+        module.Class: 'ni_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
+        options:
+            device_name: "Dev3"
+            analog_sources:
+                - "ai0"
+                - "ai1"
+                - "ai2"
+                - "ai3"
+                - "ai4"
+                - "ai5"
+                - "ai6"
+                - "ai7"
 
     scanner_dummy:
         module.Class: 'dummy.scanning_probe_dummy.ScanningProbeDummy'
