connected up apd to copy of aom control gui, switching to other computer for qtdesigner to make apd gui look nice

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -45,71 +45,14 @@ gui:
     aom_control:
         module.Class: 'aom_control.aom_control_gui.AomControlGui'
         connect:
-            aomlogic: 'aomlogic'
+            aom_control_logic: 'aom_control_logic'
 
     APD:
         module.Class: 'apd.apd_gui.APDGui'
         options:
             use_antialias: True  # optional, set to False if you encounter performance issues
         connect:
-            _time_series_logic_con: time_series_reader_logic
-
-    # scanner_gui:
-    #     module.Class: 'scanning.scannergui.ScannerGui'
-    #     # options:
-    #     #     default_position_unit_prefix: null  # optional, use unit prefix characters, e.g. 'u' or 'n'
-    #     #     min_crosshair_size_fraction: 0.02   # minimum crosshair size as fraction of the displayed scan range
-    #     connect:
-    #         scanning_logic: scanning_probe_logic
-    #         data_logic: scanning_data_logic
-    #         optimize_logic: scanning_optimize_logic
-
-    # poi_manager_gui:
-    #     module.Class: 'poimanager.poimanagergui.PoiManagerGui'
-    #     options:
-    #         data_scan_axes: xy  #optional, default: xy
-    #     connect:
-    # #         poi_manager_logic: 'poi_manager_logic'
-
-    # camera_gui:
-    #     module.Class: 'camera.cameragui.CameraGui'
-    #     connect:
-    #         camera_logic: camera_logic
-
-    # laser_gui:
-    #     module.Class: 'laser.laser_gui.LaserGui'
-    #     connect:
-    #         laser_logic: laser_logic
-
-    # odmr_gui:
-    #     module.Class: 'odmr.odmrgui.OdmrGui'
-    #     connect:
-    #         odmr_logic: 'odmr_logic'
-
-    # switch_gui:
-    #     module.Class: 'switch.switch_gui.SwitchGui'
-    #     connect:
-    #         switchlogic: 'switch_logic'
-
-    # pulsed_gui:
-    #     module.Class: 'pulsed.pulsed_maingui.PulsedMeasurementGui'
-    #     connect:
-    #         pulsedmasterlogic: 'pulsed_master_logic'
-
-    # qdplot_gui:
-    #     module.Class: 'qdplot.qdplot_gui.QDPlotterGui'
-    #     connect:
-    #         qdplot_logic: 'qdplot_logic'
-
-    # spectrometer:
-    #     module.Class: 'spectrometer.spectrometer_gui.SpectrometerGui'
-    #     connect:
-    #         spectrometer_logic: 'spectrometerlogic'
-
-    # pid_gui:
-    #     module.Class: 'pidgui.pidgui.PIDGui'
-    #     connect:
-    #         pid_logic: pid_logic
+            apd_logic: apd_logic
 
     task_runner_gui:
         module.Class: 'taskrunner.task_runner_gui.TaskRunnerGui'
@@ -128,120 +71,17 @@ logic:
             max_frame_rate: 20  # optional (default: 20Hz)
             channel_buffer_size: 20  # optional (default: 1MSample)
             max_raw_data_bytes: 1073741824  # optional (default: 1GB)
-            apd_stream_ai : "ai1"
+            # apd_stream_ai : "ai1"
         connect:
             streamer: nicard_6363_instreamer
 
-    scanning_probe_logic:
-        module.Class: 'scanning_probe_logic.ScanningProbeLogic'
-        options:
-            max_history_length: 20
-            max_scan_update_interval: 2
-            position_update_interval: 1
-        connect:
-            scanner: scanner_dummy
-
-    scanning_data_logic:
-        module.Class: 'scanning_data_logic.ScanningDataLogic'
-        options:
-            max_history_length: 20
-        connect:
-            scan_logic: scanning_probe_logic
-
-    scanning_optimize_logic:
-        module.Class: 'scanning_optimize_logic.ScanningOptimizeLogic'
-        connect:
-            scan_logic: scanning_probe_logic
-
-    poi_manager_logic:
-        module.Class: 'poi_manager_logic.PoiManagerLogic'
-        connect:
-            scanning_logic: 'scanning_probe_logic'
-            optimize_logic: 'scanning_optimize_logic'
-            data_logic: 'scanning_data_logic'
-
-    camera_logic:
-        module.Class: 'camera_logic.CameraLogic'
-        connect:
-            camera: 'camera_dummy'
-
-    laser_logic:
-        module.Class: 'laser_logic.LaserLogic'
-        options:
-            query_interval: 0.1
-        connect:
-            laser: 'laser_dummy'
-
-    odmr_logic:
-        module.Class: 'odmr_logic.OdmrLogic'
-        connect:
-            microwave: 'microwave_dummy'
-            data_scanner: 'finite_sampling_input_dummy'
-
-    switch_logic:
-        module.Class: 'switch_logic.SwitchLogic'
-        options:
-            watchdog_interval: 1
-            autostart_watchdog: True
-        connect:
-            switch: 'switch_interfuse'
-
-    pulsed_master_logic:
-        module.Class: 'pulsed.pulsed_master_logic.PulsedMasterLogic'
-        connect:
-            pulsedmeasurementlogic: 'pulsed_measurement_logic'
-            sequencegeneratorlogic: 'sequence_generator_logic'
-
-    sequence_generator_logic:
-        module.Class: 'pulsed.sequence_generator_logic.SequenceGeneratorLogic'
-        #overhead_bytes: 0
-        #additional_predefined_methods_path: null
-        #additional_sampling_functions_path: null
-        #assets_storage_path:
-        connect:
-            pulsegenerator: 'pulser_dummy'
-
-    pulsed_measurement_logic:
-        module.Class: 'pulsed.pulsed_measurement_logic.PulsedMeasurementLogic'
-        options:
-            raw_data_save_type: 'text'
-            #additional_extraction_path:
-            #additional_analysis_path:
-        connect:
-            fastcounter: 'fast_counter_dummy'
-            #microwave: 'microwave_dummy'
-            pulsegenerator: 'pulser_dummy'
-
     qdplot_logic:
         module.Class: 'qdplot_logic.QDPlotLogic'
-
-    spectrometerlogic:
-        module.Class: 'spectrometer_logic.SpectrometerLogic'
-        connect:
-            spectrometer: 'spectrometer_dummy'
-
-    pid_logic:
-        module.Class: 'pid_logic.PIDLogic'
-        connect:
-            controller: 'softpid'
-        options:
-            timestep: 0.1
-
-    softpid:
-        module.Class: 'software_pid_controller.SoftPIDController'
-        options:
-            process_value_channel: 'Temperature'
-            setpoint_channel: 'Current'
-            timestep: 100
-        connect:
-            process_value: process_control_dummy
-            setpoint: process_control_dummy
 
     task_runner_logic:
         module.Class: 'taskrunner.TaskRunnerLogic'
         options:
             module_tasks: {}
-
 
     helmholtz_coil_logic:
         module.Class: 'helmholtz_coil_logic.HelmholtzCoilLogic'
@@ -258,12 +98,11 @@ logic:
             current_max: 3
             voltage_max: 3
 
-    
-    aomlogic:
+    aom_control_logic:
         module.Class: 'aom_control_logic.AomControlLogic'
         options:
-            photodiode_channel: '/Dev3/ai0'
-            aom_channel: '/Dev3/ao3'
+            # photodiode_channel: '/Dev3/ai0'
+            # aom_channel: '/Dev3/ao3'
     #     Calibrated 21/04/2025 # 12/07/2023
             photodiode_factor: 132.8 # 200
             query_interval: 10
@@ -272,6 +111,21 @@ logic:
         connect:
             nicard_aom_ao: 'nicard_aom_ao'
             photodiode_channel: "photodiode_channel"
+
+    apd_logic:
+        module.Class: 'apd_logic.APDLogic'
+        options:
+            max_frame_rate: 20  # optional (default: 20Hz)
+            channel_buffer_size: 20  # optional (default: 1MSample)
+            max_raw_data_bytes: 1073741824  # optional (default: 1GB)
+            # apd_stream_ai : "ai1"
+            query_interval: 10
+            ui_update_interval: 100
+            # photodiode_channel: '/Dev3/ai0'
+            # aom_channel: '/Dev3/ao3'
+    #     Calibrated 21/04/2025 # 12/07/2023
+        connect:
+            apd_channel: "apd_channel"
 
 
 hardware:
@@ -322,7 +176,15 @@ hardware:
                     limits: [0, 5]
                     keep_value: True
 
+    apd_channel:
+        module.Class : 'ni_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
+        options:
+            device_name: "Dev3"
+            digital_sources:  # optional
+                - 'PFI0'
+            max_channel_samples_buffer: 2
 
+        
     photodiode_channel:
         module.Class : 'ni_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
         options:
@@ -493,13 +355,26 @@ hardware:
                 offset: 100
                 noise: 0.1
 
+    # helmholtz_coil:
+    #     module.Class: 'helmholtz_coil.helmholtzcoil.HelmholtzCoil'
+    #     options:
+    #         address: "COM1"
+
+    # helmholtz_coil_relay:
+    #     module.Class: 'helmholtz_coil.helmholtzcoilrelay.HelmholtzCoilRelay'
+    #     options:
+    #         relay_address: "COM4"
+    #         relay_pinouts: [7,8,9,10,11,12]
+
+
+    
     helmholtz_coil:
-        module.Class: 'helmholtz_coil.helmholtzcoil.HelmholtzCoil'
+        module.Class: 'dummy.helmholtz_coil_dummy.HelmholtzCoil'
         options:
-            address: "ASRL5::INSTR"
+            address: "COM1"
 
     helmholtz_coil_relay:
-        module.Class: 'helmholtz_coil.helmholtzcoilrelay.HelmholtzCoilRelay'
+        module.Class: 'dummy.helmholtz_coil_relay_dummy.HelmholtzCoilRelay'
         options:
             relay_address: "COM4"
             relay_pinouts: [7,8,9,10,11,12]
