--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -47,12 +47,10 @@ gui:
         connect:
             aom_control_logic: 'aom_control_logic'
 
-    APD:
-        module.Class: 'apd.apd_gui.APDGui'
-        options:
-            use_antialias: True  # optional, set to False if you encounter performance issues
+    apd:
+        module.Class: 'apd.countergui.CounterGui'
         connect:
-            apd_logic: apd_logic
+            counterlogic1: 'counterlogic'
 
     task_runner_gui:
         module.Class: 'taskrunner.task_runner_gui.TaskRunnerGui'
@@ -112,20 +110,26 @@ logic:
             nicard_aom_ao: 'nicard_aom_ao'
             photodiode_channel: "photodiode_channel"
 
-    apd_logic:
-        module.Class: 'apd_logic.APDLogic'
-        options:
-            max_frame_rate: 20  # optional (default: 20Hz)
-            channel_buffer_size: 20  # optional (default: 1MSample)
-            max_raw_data_bytes: 1073741824  # optional (default: 1GB)
-            # apd_stream_ai : "ai1"
-            query_interval: 10
-            ui_update_interval: 100
-            # photodiode_channel: '/Dev3/ai0'
-            # aom_channel: '/Dev3/ao3'
-    #     Calibrated 21/04/2025 # 12/07/2023
+    # apd_logic:
+    #     module.Class: 'apd_logic.APDLogic'
+    #     options:
+    #         max_frame_rate: 20  # optional (default: 20Hz)
+    #         channel_buffer_size: 20  # optional (default: 1MSample)
+    #         max_raw_data_bytes: 1073741824  # optional (default: 1GB)
+    #         # apd_stream_ai : "ai1"
+    #         query_interval: 10
+    #         ui_update_interval: 100
+    #         # photodiode_channel: '/Dev3/ai0'
+    #         # aom_channel: '/Dev3/ao3'
+    # #     Calibrated 21/04/2025 # 12/07/2023
+    #     connect:
+    #         apd_channel: "apd_channel"
+
+        counterlogic:
+        module.Class: 'counter_logic.CounterLogic'
         connect:
-            apd_channel: "apd_channel"
+            counter1: 'nicard_6363'
+            savelogic: 'savelogic'
 
 
 hardware:
@@ -177,12 +181,17 @@ hardware:
                     keep_value: True
 
     apd_channel:
-        module.Class : 'ni_x_series.ni_x_series_in_streamer.NIXSeriesInStreamer'
+        module.Class: 'ni_x_series.ni_x_series_finite_sampling_input.NIXSeriesFiniteSamplingInput'
         options:
-            device_name: "Dev3"
-            digital_sources:  # optional
-                - 'PFI0'
-            max_channel_samples_buffer: 2
+            device_name: 'Dev3'
+            digital_channel_units:  # optional
+                'PFI0': 'c/s'
+                
+            max_channel_samples_buffer: 10000000  # optional, default 10000000
+            read_write_timeout: 10  # optional, default 10
+            sample_clock_output: '/Dev1/PFI20'  # optional
+            trigger_edge: RISING  # optional
+
 
         
     photodiode_channel:
