--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -35,6 +35,12 @@ global:
     daily_data_dirs: True
 
 gui:
+
+    apd:
+        module.Class: 'apd.countergui.CounterGui'
+        connect:
+            apd_logic: 'apd_logic'
+
     time_series:
         module.Class: 'time_series.time_series_gui.TimeSeriesGui'
         options:
@@ -47,10 +53,6 @@ gui:
         connect:
             aom_control_logic: 'aom_control_logic'
 
-    apd:
-        module.Class: 'apd.countergui.CounterGui'
-        connect:
-            counterlogic1: 'counterlogic'
 
     task_runner_gui:
         module.Class: 'taskrunner.task_runner_gui.TaskRunnerGui'
@@ -110,26 +112,17 @@ logic:
             nicard_aom_ao: 'nicard_aom_ao'
             photodiode_channel: "photodiode_channel"
 
-    # apd_logic:
-    #     module.Class: 'apd_logic.APDLogic'
-    #     options:
-    #         max_frame_rate: 20  # optional (default: 20Hz)
-    #         channel_buffer_size: 20  # optional (default: 1MSample)
-    #         max_raw_data_bytes: 1073741824  # optional (default: 1GB)
-    #         # apd_stream_ai : "ai1"
-    #         query_interval: 10
-    #         ui_update_interval: 100
-    #         # photodiode_channel: '/Dev3/ai0'
-    #         # aom_channel: '/Dev3/ao3'
-    # #     Calibrated 21/04/2025 # 12/07/2023
-    #     connect:
-    #         apd_channel: "apd_channel"
-
-        counterlogic:
-        module.Class: 'counter_logic.CounterLogic'
+    apd_logic:
+        module.Class: 'apd_logic.CountingLogic'
+        options:
+            max_frame_rate: 20  # optional (default: 20Hz)
+            channel_buffer_size: 20  # optional (default: 1MSample)
+            max_raw_data_bytes: 1073741824  # optional (default: 1GB)
+            query_interval: 10
+            ui_update_interval: 100
         connect:
-            counter1: 'nicard_6363'
-            savelogic: 'savelogic'
+            apd_channel: "apd_channel"
+
 
 
 hardware:
@@ -180,17 +173,32 @@ hardware:
                     limits: [0, 5]
                     keep_value: True
 
+    # apd_channel:
+    #     module.Class: 'ni_x_series.ni_x_series_finite_sampling_input.NIXSeriesFiniteSamplingInput'
+    #     options:
+    #         device_name: 'Dev3'
+    #         digital_channel_units:  # optional
+    #             'PFI0': 'c/s'
+    #         max_channel_samples_buffer: 2  # optional, default 10000000
+    #         read_write_timeout: 10  # optional, default 10
+    #         trigger_edge: RISING  # optional
+    #         constraints:
+    #             max_detectors : 4
+    #             min_count_frequency : 1e-3
+    #             max_count_frequency : 10e9
     apd_channel:
-        module.Class: 'ni_x_series.ni_x_series_finite_sampling_input.NIXSeriesFiniteSamplingInput'
+        module.Class: 'dummy.apd_dummy.APDDummy'
         options:
             device_name: 'Dev3'
             digital_channel_units:  # optional
                 'PFI0': 'c/s'
-                
-            max_channel_samples_buffer: 10000000  # optional, default 10000000
+            max_channel_samples_buffer: 2  # optional, default 10000000
             read_write_timeout: 10  # optional, default 10
-            sample_clock_output: '/Dev1/PFI20'  # optional
             trigger_edge: RISING  # optional
+            constraints:
+                max_detectors : 4
+                min_count_frequency : 1e-3
+                max_count_frequency : 10e9
 
 
         
