added gui for piezosteppers

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -37,7 +37,7 @@ global:
 gui:
 
     apd:
-        module.Class: 'apd.countergui.CounterGui'
+        module.Class: 'apd.apdcountergui.CounterGui'
         connect:
             apd_logic: 'apd_logic'
 
@@ -63,6 +63,9 @@ gui:
         module.Class: 'helmholtz_coil.helmholtz_coil_gui.HelmholtzCoilGui'
         connect: 
             helmholtz_coil_logic: 'helmholtz_coil_logic'
+
+    anc_gui:
+        module.Class: "anc300.piezo_stepper_gui.PiezoStepperGUI"
 
 logic:
     time_series_reader_logic:
