mostly working anc300 gui, just needs testing on the real thing

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -64,8 +64,10 @@ gui:
         connect: 
             helmholtz_coil_logic: 'helmholtz_coil_logic'
 
-    anc_gui:
-        module.Class: "anc300.piezo_stepper_gui.PiezoStepperGUI"
+    piezo_stepper_gui:
+        module.Class: "piezo_stepper.piezo_stepper_gui.PiezoStepperGui"
+        connect:
+            piezo_stepper_logic : "piezo_stepper_logic"
 
 logic:
     time_series_reader_logic:
@@ -77,6 +79,11 @@ logic:
             # apd_stream_ai : "ai1"
         connect:
             streamer: nicard_6363_instreamer
+
+    piezo_stepper_logic:
+        module.Class: "piezo_stepper_logic.PiezoStepperLogic"
+        connect:
+            piezo_stepper: piezo_stepper_dummy
 
     qdplot_logic:
         module.Class: 'qdplot_logic.QDPlotLogic'
@@ -203,6 +210,23 @@ hardware:
                 min_count_frequency : 1e-3
                 max_count_frequency : 10e9
 
+    piezo_stepper_dummy:
+        module.Class: "dummy.piezo_stepper_dummy.PiezoStepperDummy"
+        options:
+            inst_info:
+                name: 'ANC300'
+                address : 'COM3'
+            default_params:
+                    1 :
+                        'voltage': 25 #piezo amplitude in Volts
+                        'frequency' : 1000 #piezo frequency in Hz
+                    2 :
+                        'voltage' : 25,
+                        'frequency' : 1000
+                    3 : 
+                        'voltage' : 25,
+                        'frequency' : 1000
+            # constraints:
 
         
     photodiode_channel:
