attocude anc300 gui working!!!!

--- a/src/qudi/default.cfg
+++ b/src/qudi/default.cfg
@@ -83,7 +83,7 @@ logic:
     piezo_stepper_logic:
         module.Class: "piezo_stepper_logic.PiezoStepperLogic"
         connect:
-            piezo_stepper: piezo_stepper_dummy
+            piezo_stepper: ANC300
 
     qdplot_logic:
         module.Class: 'qdplot_logic.QDPlotLogic'
@@ -210,22 +210,22 @@ hardware:
                 min_count_frequency : 1e-3
                 max_count_frequency : 10e9
 
-    piezo_stepper_dummy:
-        module.Class: "dummy.piezo_stepper_dummy.PiezoStepperDummy"
+    ANC300:
+        module.Class: "attocube.ANC300.ANC300"
         options:
             inst_info:
                 name: 'ANC300'
                 address : 'COM3'
-            default_params:
-                    1 :
-                        'voltage': 25 #piezo amplitude in Volts
-                        'frequency' : 1000 #piezo frequency in Hz
-                    2 :
-                        'voltage' : 25,
-                        'frequency' : 1000
-                    3 : 
-                        'voltage' : 25,
-                        'frequency' : 1000
+            # default_params:
+            #         1 :
+            #             'voltage': 25 #piezo amplitude in Volts
+            #             'frequency' : 1000 #piezo frequency in Hz
+            #         2 :
+            #             'voltage' : 25,
+            #             'frequency' : 1000
+            #         3 : 
+            #             'voltage' : 25,
+            #             'frequency' : 1000
             # constraints:
 
         
